--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_mode: # [light|dark]
 img_cdn: "https://chirpy-img.netlify.app"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "https://github.com/lzlkolo/lzlkolo.github.io/blob/main/assets/img/avagtar.jpg"
+avatar: "https://github.com/lzlkolo/lzlkolo.github.io/blob/main/assets/img/avatar.jpg?raw=true"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
